--- a/src/Samples/ConsoleApp/client.html
+++ b/src/Samples/ConsoleApp/client.html
@@ -16,7 +16,7 @@
 
             // when data is comming from the server, this metod is called
             ws.onmessage = function (evt) {
-                inc.innerHTML += evt.data + '<br/>';
+                inc.innerHTML += 'recd: ' + evt.data + '<br/>';
             };
 
             // when the connection is established, this method is called
@@ -32,6 +32,7 @@
 			form.addEventListener('submit', function(e){
 				e.preventDefault();
 				var val = input.value;
+				inc.innerHTML += 'sent: ' + val + '<br/>';
 				ws.send(val);
 				input.value = "";
 			});
