Added WebSocketRelay class which makes is easier to manage WebSocketConnection Lists, enables message broadcasts including or excluding the Sender from the Broadcast List.

--- a/src/Samples/ConsoleApp/client.html
+++ b/src/Samples/ConsoleApp/client.html
@@ -28,10 +28,15 @@
             ws.onclose = function () {
                 inc.innerHTML += '.. connection closed<br/>';
             }
+
+            ws.onerror = function (err, obj) {
+                console.log(err, obj);
+            }
             
 			form.addEventListener('submit', function(e){
 				e.preventDefault();
 				var val = input.value;
+				console.log(val);
 				ws.send(val);
 				input.value = "";
 			});
